Updating from upstream.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Igor Hjelmstrom Vinhas Ribeiro <igorhvr@iasylum.net>
 ENV TERM xterm
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN echo "2019-08-26" > /last_bedlam_base_image_update
+RUN echo "2021-03-17" > /last_bedlam_base_image_update
 RUN cd /var/lib/apt ; rm -rf * 
 RUN apt-get -y update --fix-missing
 RUN apt-get install -y apt-utils software-properties-common dialog
@@ -31,6 +31,7 @@ RUN apt-get -y install ntpdate ntp
 RUN apt-get -y install sysstat
 RUN apt-get -y install tor netcat-openbsd
 RUN apt-get -y install secure-delete
+RUN apt-get -y install strace
 
 WORKDIR /opt
 RUN apt-get update \
